--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,18 @@ dependencies:
   # --- Navigation ---
   go_router: ^13.1.0
 
+  # Mídia e Filesystem
+  image_picker: ^1.0.7
+  flutter_image_compress: ^2.1.0
+  path_provider: ^2.1.2
+  cached_network_image: ^3.3.0
+
   # --- Utils ---
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
   uuid: ^4.3.3
   intl: ^0.20.2
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
