--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.1.0
+  google_fonts: ^8.0.1
 
   # --- Firebase (Backend) ---
   firebase_core: ^2.24.2
@@ -40,6 +40,13 @@ dependencies:
   uuid: ^4.3.3
   intl: ^0.20.2
   firebase_storage: ^11.6.0
+  pdf: ^3.10.4
+  printing: ^5.11.1
+  http: ^1.1.0
+  flex_color_scheme: ^8.4.0
+  flutter_animate: ^4.5.2
+  shimmer: ^3.0.0
+  flutter_svg: ^2.2.3
 
 dev_dependencies:
   flutter_test:
