feat: lançamento do MVP do App de Vistoria Imobiliária
Implementação completa das funcionalidades principais:
- Setup de Arquitetura (Flutter + Riverpod + GoRouter)
- Módulo de Autenticação (Firebase Auth)
- CRUD de Vistorias e Sincronização Offline (Firestore)
- Detalhes de Cômodos e Itens com fluxo de checklist
- Captura, compressão e upload de fotos (Firebase Storage)
- Geração de Relatório em PDF com compartilhamento
- Polimento de UI/UX (Temas, Shimmer, Empty States)
- Configuração de Segurança e Preparação para Deploy

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,31 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"vistorias-imovel","appId":"1:340371444506:android:8bb8bc73e33719985b52a3","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"vistorias-imovel","configurations":{"android":"1:340371444506:android:8bb8bc73e33719985b52a3","ios":"1:340371444506:ios:75b1d69e2ccdd6975b52a3","macos":"1:340371444506:ios:75b1d69e2ccdd6975b52a3","web":"1:340371444506:web:c74e929df5c2454c5b52a3","windows":"1:340371444506:web:a2e4ff77d953cd465b52a3"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "vistorias-imovel",
+          "appId": "1:340371444506:android:8bb8bc73e33719985b52a3",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "vistorias-imovel",
+          "configurations": {
+            "android": "1:340371444506:android:8bb8bc73e33719985b52a3",
+            "ios": "1:340371444506:ios:75b1d69e2ccdd6975b52a3",
+            "macos": "1:340371444506:ios:75b1d69e2ccdd6975b52a3",
+            "web": "1:340371444506:web:c74e929df5c2454c5b52a3",
+            "windows": "1:340371444506:web:a2e4ff77d953cd465b52a3"
+          }
+        }
+      }
+    }
+  },
+  "firestore": {
+    "database": "(default)",
+    "location": "southamerica-east1",
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  }
+}
