--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vistoria_imoveis
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -53,6 +53,7 @@ dependencies:
   flutter_animate: ^4.5.2
   shimmer: ^3.0.0
   flutter_svg: ^2.2.3
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
     # --- Testing ---   
@@ -76,3 +77,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/icon/google.png
